crates/djls-semantic/src/snapshots/djls_semantic__tests__snapshot_multiple_error_types.snap
---
source: crates/djls-semantic/src/lib.rs
expression: rendered
---
error[S116]: Filter 'title' does not accept an argument
 --> test.html:1:10
  |
1 | {{ value|title:"unwanted" }}
  |          ^^^^^^^^^^^^^^^^
error[S114]: Unexpected '==' in if expression
 --> test.html:2:1
  |
2 | {% if == broken %}bad{% endif %}
  | ^^^^^^^^^^^^^^^^^^
error[S116]: Filter 'lower' does not accept an argument
 --> test.html:3:9
  |
3 | {{ text|lower:"arg" }}
  |         ^^^^^^^^^^^
error[S100]: Unclosed 'if' tag
 --> test.html:4:14
  |
4 | {% comment %}{% if and %}{% endcomment %}
  |              ^^^^^^^^^^^^
error[S115]: Filter 'truncatewords' requires an argument
 --> test.html:5:11
  |
5 | {{ result|truncatewords }}
  |           ^^^^^^^^^^^^^
